--- a/css/sub_layout_design.css
+++ b/css/sub_layout_design.css
@@ -2,45 +2,366 @@
 
 @import url( common.css);
 
+/* 모바일 수평 스크롤 */
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body{
   letter-spacing: 1px;
   background: #fff;
 }
 
 /**** GO HOME ****/
-.myname{
+.myname {
   position: fixed;
-  top: 50px;
-  left: 40px;
+  top: 30px;
+  left: 30px;
   width: 120px; height: 120px;
   z-index: 300;
 }
-  .myname > a{
-    width: 120px; height: 120px;
-    background: url(../images/sunny_logo.png);
-    text-indent: -6000px;
-    overflow: hidden;
-    animation: rotate_image 15s linear infinite;
-    transform-origin: 50% 50%;
+.myname > a {
+  width: 120px; height: 120px;
+  background: url(../images/sunny_logo.png);
+  text-indent: -6000px;
+  overflow: hidden;
+  animation: rotate_image 15s linear infinite;
+  transform-origin: 50% 50%;
+}
+@keyframes rotate_image {
+  100% {
+    transform: rotate(360deg);
   }
-  @keyframes rotate_image{
-    100%{
-      transform: rotate(360deg);
-    }
-  }
-  .myname:hover > a{
-    transform: rotate(-1440deg);
-  }
+}
+.myname:hover > a {
+  transform: rotate(-1440deg);
+}
+
+/**** NAV ****/
+#main_header  {
+  width: 100%; height: 50px;
+  position: relative;
+  background-color: #fff;
+}
+#toggle  {
+  display: none;
+}
+.toggle_menu  {
+  width: 45px; height: 45px;
+  background: url(../images/toggle_btn_sub.png);
+  position: fixed;
+  right: 3%;
+  top: 3%;
+  text-indent: -6000px; overflow: hidden;
+  z-index: 2;
+}
+#main_nav_wrap {
+  width: 100%;
+  position: fixed;
+  right: -100%; top: 0; bottom: 0;
+  z-index: 100;
+}
+input#toggle:checked + #main_nav_wrap {
+  right: 0;
+  transition-duration: 0.3s;
+  z-index: 500;
+}
+#main_nav > li > h3 > a:checked + #main_nav_wrap  {
+  position: fixed;
+  right: -100%; top: 0; bottom: 0;
+}
+ul#main_nav {
+  width: 50%;
+  background: #fff;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+  box-shadow: 0 0 14px 13px rgba(0, 0, 0, 0.1);
+}
+ul#main_nav > li  {
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+  font-size: 20px;
+}
+ul#main_nav > li:first-child  {
+  margin-top: 70px;
+}
+ul#main_nav > li > h3  {
+  height: 54px;
+  padding-left: 30px;
+  line-height: 54px;
+  font-weight: 700;
+  font-size: 24px;
+  color: #8081d9;
+  cursor: pointer;
+}
+ul#main_nav > li > h3 > button  {
+  width: 100%;
+  height: 54px;
+  text-align: left;
+  color: #8081d9;
+  font-size: 24px;
+  cursor: pointer;
+}
+ul#main_nav > li:hover > h3 > button  {
+  color: #717171;
+}
+ul#main_nav > li:hover > h3  {
+  color: #717171;
+}
+ul#main_nav > li > h3 > a  {
+  color: #8081d9;  
+}
+ul#main_nav > li:hover > h3 > a  {
+  color: #717171;
+}
+.arrow-down  {
+  position: absolute;
+  right: 10%;
+  line-height: 55px;
+  font-size: 30px;
+  transform: rotateZ(0deg);
+}
+ul#main_nav > li.active > h3 > .arrow-down  {
+  transform: rotateZ(-180deg);
+  transition-duration: 0.3s;
+}
+
+/***** 세부메뉴 *****/
+ul#main_nav > li > ul.sub_nav > li {
+  height: 0;
+  overflow: hidden;
+  transition-duration: 0.3s;
+}
+ul#main_nav > li.active > ul.sub_nav > li {
+  height: 50px;
+}
+ul#main_nav > li > ul.sub_nav > li > a {
+  padding-left: 60px;
+  line-height: 50px;
+  height: 50px;
+  color: #fff;
+  font-size: 20px;
+  background-color: #9b9ce8;
+  transition-duration: 0.3s;
+}
+ul#main_nav > li > ul.sub_nav > li:hover > a  {
+  color: #fff;
+  background-color: #717171;
+}
+#main_nav_wrap > label.btn_close {
+  width: 30px; height: 26px;
+  background: url(../images/toggle_close.png) no-repeat;
+  position: absolute;
+  right: 3%; top: 3%;
+  text-indent: -6000px; overflow: hidden;
+  transform: rotateZ(0deg);
+}
+input#toggle:checked + #main_nav_wrap > label.btn_close {
+  transition-duration: 0.8s;
+  transform: rotateZ(-180deg);
+}
+#main_nav_wrap > label.bg_close {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  right: 50%; top: 0; bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  transform: rotateZ(0deg);
+}
+input#toggle:checked + #main_nav_wrap > label.bg_close {
+  left: 0;
+  transition-duration: 0.3s;
+  transform: rotateZ(0deg);
+}
+
+/***** 고정 메뉴 *****/
+div#menu {
+  width: 80px; height: 500px;
+  position: absolute;
+  left: 2%;
+  z-index: 200;
+  transition-duration: 0.4s;
+  transition-timing-function: ease-out;
+}
+div#menu > ul > li {
+  width: 120px; height: 120px;
+  position: relative;
+  margin-bottom: 7px;
+}
+div#menu > ul > li:last-child {
+  margin-bottom: 0;
+}
+div#menu > ul > li > a {
+  width: 120px;
+  height: 120px;
+}
+div#menu > ul > li > a > div > img {
+  width: 120px;
+}
+
+/** 고정 메뉴 hover효과 **/
+div#menu > ul > li > a > .front {
+  position: absolute;
+  left: 0; top: 0;
+  transform: rotateY(0deg);
+  backface-visibility: hidden;
+  transition-duration: 0.3s;
+}
+div#menu > ul > li:hover > a > .front {
+  transform: rotateY(180deg);
+}
+div#menu > ul > li > a > .back {
+  position: absolute;
+  left: 0; top: 0;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  transition-duration: 0.3s;
+}
+div#menu > ul > li:hover > a > .back {
+  transform: rotateY(360deg);
+}
+
+/** MAIN **/
+#main {
+  width: 100%;
+  position: relative;
+}
+#main .contentswrap {
+  width: 100%;
+  height: 750px;
+  position: fixed;
+  top: 0;
+  z-index: -100;
+  background-color: #347f97;
+}
+#main .contentswrap img {
+  position: absolute;
+  top: 8%;
+  right: 2%;
+}
+#main > .contentswrap > .title {
+  position: absolute;
+  width: 25%;
+  top: 12%;
+  left: 14%;
+}
+#main > .contentswrap > .title > .logo {
+  font-size: 40px;
+  width: 274px;
+  padding-bottom: 15px;
+  border-bottom: 3px solid #fff;
+}
+#main > .contentswrap > .title > h2 {
+  padding-top: 15px;
+  font-size: 24px;
+  line-height: 30px;
+  margin-top: 5px;
+}
+#main > .contentswrap > .title > h3 {
+  font-size: 20px;
+  margin-top: 30%;
+}
+#main > .contentswrap > .title > p {
+  font-size: 24px;
+}
+#main > .contentswrap > .title > p {
+  padding-top: 1%;
+  font-size: 20px;
+  line-height: 25px;
+}
+#main > .contentswrap > ul.period {
+  position: absolute;
+  top: 72%;
+  left: 14%;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+section h3 {
+  font-size: 30px;
+  padding: 70px 0;
+}
+/** SECTION1 CARDNEWS1 - 공모전공고 **/
+#cardnews_1 {
+  width: 100%;
+  background: #ddece8;
+  margin-top: 750px;
+  text-align: center;
+}
+#cardnews_1 h3 {
+  color: #347f97;
+}
+#cardnews_1 ul {
+  display: flex;
+}
+#cardnews_1 ul li {
+  flex-grow: 1;
+}
+/* .cardnews_1_01 {
+  padding: 12% 0 0 38%;
+}
+.cardnews_1_02 {
+  padding: 0 0 5%8%;
+} */
+
+/** SECTION2 CARDNEWS1 - detail **/
+#cardnews_1_detail {
+  width: 100%;
+  background-color: #ddece8;
+  margin-top: -2px;
+}
+#cardnews_1_detail ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+#cardnews_1_detail ul li {
+  padding: 10px;
+}
+#cardnews_1_detail ul li img {
+  box-shadow: 0 0 20px 5px rgb(0, 0, 0, 10%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /**** MAIN ****/
-#main{
+/* #main{
   width: 100%; height: 750px;
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  background: url(../images/main_balimoon.png) no-repeat;
+  background: url(../images/main_cardnews.png) no-repeat;
   z-index: -50;
 }
   #main > .contentswrap{
@@ -80,51 +401,8 @@ body{
     }
       #main > .contentswrap > ul.period > li{
         padding: 8px 0;
-      }
+      } */
 
-/***** 고정 메뉴 *****/
-div#menu{
-  width: 120px; height: 420px;
-  position: absolute;
-  right: 3%;
-  z-index: 200;
-  transition-duration: 0.4s;
-  transition-timing-function: ease-out;
-}
-  div#menu > ul > li{
-    width: 120px; height: 120px;
-    position: relative;
-    margin-bottom: 10px;
-  }
-  div#menu > ul > li:last-child{
-    margin-bottom: 0;
-  }
-    div#menu > ul > li > a{
-      width: 120px;
-      height: 120px;
-    }
-
-  /** 고정 메뉴 hover효과 **/
-  div#menu > ul > li > a > .front{
-    position: absolute;
-    left: 0; top: 0;
-    transform: rotateY(0deg);
-    backface-visibility: hidden;
-    transition-duration: 0.3s;
-  }
-  div#menu > ul > li:hover > a > .front{
-    transform: rotateY(180deg);
-  }
-  div#menu > ul > li > a > .back{
-    position: absolute;
-    left: 0; top: 0;
-    transform: rotateY(180deg);
-    backface-visibility: hidden;
-    transition-duration: 0.3s;
-  }
-  div#menu > ul > li:hover > a > .back{
-    transform: rotateY(360deg);
-  }
 
 /**** SECTION1 GUIDE ****/
 #guide{
