--- a/css/master.css
+++ b/css/master.css
@@ -429,9 +429,9 @@ section {
 }
 .circle {
   width: 350px; height: 350px;
-  margin: 0 auto;
-  background: url(../images/contact_bg.png) no-repeat center;
-  margin-top: 80px;
+  margin: 5% auto 0 auto;
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 #contact > .wrap_align > .address > ul.contactme {
   margin-top: -285px;
@@ -639,9 +639,9 @@ section {
   }
   .circle {
     width: 350px; height: 350px;
-    margin: 0 auto;
-    background: url(../images/contact_bg.png) no-repeat center;
-    margin-top: 70px;
+    margin: 5% auto 0 auto;
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -791,9 +791,9 @@ section {
   }
   .circle {
     width: 350px; height: 350px;
-    margin: 0 auto;
-    background: url(../images/contact_bg.png) no-repeat center;
-    margin-top: 40px;
+    margin: 5% auto 0 auto;
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -966,9 +966,9 @@ section {
   }
   .circle {
     width: 350px; height: 350px;
-    margin: 0 auto;
-    background: url(../images/contact_bg.png) no-repeat center;
-    margin-top: 12%;
+    margin: 12% auto 0 auto;
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -1236,10 +1236,9 @@ section {
   }
   .circle {
     width: 240px; height: 240px;
-    margin: 0 auto;
-    background: url(../images/contact_bg.png) no-repeat center;
-    background-size: 240px;
-    margin-top: 10%;
+    margin: 10% auto 0 auto;
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
   }
   .footer {
     width: 100%; height: 60px;
