--- a/css/sub_layout_design.css
+++ b/css/sub_layout_design.css
@@ -189,7 +189,7 @@ div#menu {
 div#menu > ul > li {
   width: 120px; height: 120px;
   position: relative;
-  margin-bottom: 7px;
+  margin-bottom: 20px;
 }
 div#menu > ul > li:last-child {
   margin-bottom: 0;
@@ -921,8 +921,9 @@ section h3 {
 
 /** SECTION2 Design Projuect - 팜팜발리 **/
 .project_body #project_1 {
+  position: relative;
   width: 100%;
-  background: #cad5b0;
+  background: #fcf8e5;
   margin-top: 750px;
   text-align: center;
 }
@@ -936,7 +937,9 @@ section h3 {
   justify-content: center;
 }
 .project_body #project_1 ul li:first-child img {
-  padding: 0 50px;
+  width: 500px;
+  margin: 50px 30px;
+  box-shadow: -10px 13px 20px 5px rgb(0, 0, 0, 10%);
 }
 .project_body #project_1 ul li:nth-child(2) img {
   width: 680px;
@@ -944,7 +947,20 @@ section h3 {
 }
 .project_body #project_1 ul li:last-child img {
   width: 400px;
-  padding: 0 20px;
+  margin: 0 20px;
+  box-shadow: -10px 13px 20px 5px rgb(0, 0, 0, 10%);
+}
+.leaf_left {
+  position: absolute;
+  left: 0;
+  bottom: 25%;
+  width: 25%;
+}
+.leaf_right {
+  position: absolute;
+  right: 0;
+  top: 25%;
+  width: 25%;
 }
 
 /** FOOTER **/
@@ -977,5 +993,217 @@ section h3 {
   margin-top: 0;
 }
 
+/** SECTION1 GRAPHIC DESIGN - 암호모듈검증 교재 **/
+.graphic_body #main .contentswrap {
+  background-color: #13294d;
+}
+.graphic_body #main .contentswrap img {
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  width: 450px;
+}
+.graphic_body #main .contentswrap .title {
+  width: 21%;
+}
+.graphic_body #main .contentswrap .title h3 {
+  margin-top: 25%;
+}
+.graphic_body #main .contentswrap .title .logo {
+  width: 320px;
+}
+.graphic_body #main .contentswrap ul.period {
+  top: 77%;
+}
+
+/** SECTION2 GRAPHIC DESIGN - 암호모듈검증 교재 **/
+.graphic_body #graphic_1 {
+  position: relative;
+  width: 100%;
+  background: #ececec;
+  margin-top: 750px;
+  text-align: center;
+}
+.graphic_body #graphic_1 ul {
+  margin: 0 10%;
+  padding: 100px 0 200px 0;
+}
+.graphic_body #graphic_1 ul li {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.graphic_1_02 {
+  width: 700px;
+  height: 495px;
+  margin: 20px 50px;
+}
+.graphic_1_03 {
+  width: 400px;
+  height: 744px;
+  margin: 20px 50px;
+}
+.graphic_1_04, .graphic_1_05 {
+  width: 550px;
+  margin: 100px 2% 0 2%;
+  box-shadow: -10px 13px 20px 5px rgb(0, 0, 0, 10%);
+}
+.graphic_1_06 {
+  margin-top: 100px;
+  box-shadow: -10px 13px 20px 5px rgb(0, 0, 0, 10%);
+}
+
+/** SECTION3 GRAPHIC DESIGN - 포스터 **/
+#main_poster {
+  width: 100%;
+  background: #2c4e9c;
+  margin-top: -2px;
+}
+#main_poster .contentswrap {
+  width: 80%;
+  height: 750px;
+  margin: 0 auto;
+  position: relative;
+}
+#main_poster .contentswrap img {
+  position: absolute;
+  top: 10%;
+  right: 1%;
+  width: 550px;
+}
+#main_poster > .contentswrap > .title {
+  position: absolute;
+  width: 25%;
+  top: 12%;
+  left: 14%;
+}
+#main_poster > .contentswrap > .title > .logo {
+  font-size: 40px;
+  width: 340px;
+  padding-bottom: 15px;
+  border-bottom: 3px solid #fff;
+}
+#main_poster > .contentswrap > .title > h2 {
+  padding-top: 15px;
+  font-size: 24px;
+  line-height: 30px;
+  margin-top: 5px;
+}
+#main_poster > .contentswrap > .title > h3 {
+  padding: 30px 0;
+  font-size: 20px;
+  margin-top: 15%;
+}
+#main_poster > .contentswrap > .title > p {
+  font-size: 24px;
+  padding-top: 1%;
+  font-size: 20px;
+  line-height: 30px;
+}
+#main_poster > .contentswrap > ul.period {
+  position: absolute;
+  top: 72%;
+  left: 14%;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+/** SECTION5 CHARACTER **/
+#graphic_2 {
+  background-color: #ececec;
+  margin-top: -2px;
+}
+#graphic_2 ul {
+  width: 80%;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+#graphic_2 ul li {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#graphic_2 ul li img {
+  width: 600px;
+  box-shadow: 0 0 17px 1px rgb(0, 0, 0, 7%);
+  margin: 20px;
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/** FOOTER **/
+.graphic_footer {
+  position: relative;
+  width: 100%; height: 100px;
+  text-align: center;
+  background-color: #2c2a29;
+  letter-spacing: 1px;
+}
+.graphic_footer #btntop {
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  margin-left: -50px;
+}
+.graphic_footer > #btntop > a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_starbucks.png) no-repeat;
+}
+.graphic_footer > #btntop > a:hover {
+  margin-top: -7px;
+  transition-duration: 0.3s;
+}
+.graphic_footer > .copyright {
+  font-size: 18px;
+  color: #fff;
+  padding-top: 50px;
+  margin-top: 0;
+}
